--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: Helvetica;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("../src/images/full_background.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: Helvetica, Arial, Sans-Serif;
+}
+
+.styleDiv {
+  text-align: center;
+  border: 1px solid black;
+  background-color: rgb(205, 205, 205);
+  padding: 35px;
+  border-radius: 10px;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+    rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
+}
+
+.centerDiv {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.errorSpan {
+  color: rgb(187, 0, 0);
+  text-align: center;
+  height: 25px;
+  display: block;
+}
+
+.errorMessage {
+  text-align: center;
+  margin-top: 20px;
+  border: 1px solid;
+  padding: 8px 3px 8px 40px;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  border-radius: 5px;
+  color: #d8000c;
+  background-color: #ffbaba;
+  background-image: url("https://i.imgur.com/GnyDvKN.png");
 }
